# therapytrain

./: .babelrc  .browserslistrc  .code-quality.json  .cursorignore  .cursorrules  .env  .env.development  .env.example  .env.production  .env.test  .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .gitmodules  .npmignore  .npmrc  .pnp.cjs  .vercelignore  .windsurfrules  .yarnrc.yml  =2.0.0  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README copy.md  README.md  RELEASE_NOTES.md  SECURITY.md  TASKS.md  bun.lockb  components.json  cspell.json  docker-compose.yml  enhancement-roadmap.mdx  environment.yml  eslint.config.cjs  index.html  jest.config.js  (+44 more)
.cspell/: custom-dictionary.txt
.cursor/: settings.json
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.qodo/: history.sqlite
.trunk/: trunk.yaml
View/: .gitignore  README.md  compose.yaml  dockerstart.sh  dockerstop.sh  pullimages.sh  removeimages.sh  viewctl  viewctl-completion.sh
app/: global-error.tsx  globals.css  layout.tsx  page.tsx
backend/: .env  app.ts  appTemp.ts  jest.integration.config.js  jest.perf.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
config/: cache.config.ts
devel/: DEVELOPMENT.md  DEVELOPMENT_II.md  PROJECT_BOARD.md  PROJECT_BOARD_II.md
docs/: DEVELOPMENT_II.md  analytics-optimizations.mdx  architecture.mdx  devops.md  docs.json  enhancement-roadmap.mdx  integration-roadmap.mdx  introduction.mdx  mega-list.mdx  mega-roadmap.mdx  mint.json  quickstart.mdx  roadmap.mdx  text-analysis.mdx  vercel-push.mdx
lib/: data.ts  (+9 more)
(+1488 files in other folders)
