[project]
name = "therapytrain"
version = "0.0.1"
description = "Home of TherapyTrain is here."
authors = [
    {name = "Vivi",email = "vivi@privacyrequired.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright (>=1.50.0,<2.0.0)",
    "html5lib (>=1.1,<2.0)",
    "duckduckgo-search (>=7.3.0,<8.0.0)",
    "openai (>=1.61.0,<2.0.0)",
    "anthropic (>=0.45.2,<0.46.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "unittest2 (>=1.1.0,<2.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-asyncio (>=0.25.3,<0.26.0)",
    "google-generativeai (>=0.8.4,<0.9.0)",
    "grpcio (>=1.70.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
